--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -73,6 +73,7 @@ $h1-font-size: 3rem !default;
 $h2-font-size: 2.4rem !default;
 $h3-font-size: 3rem !default;
 $h4-font-size: 1.8rem !default;
+$highlight-color: $maroon !default;
 
 // Banners
 $banner-heading-font-size : 5rem !default;
