--- a/resources/views/website/assets/sass/_init.scss
+++ b/resources/views/website/assets/sass/_init.scss
@@ -8,13 +8,6 @@
 $body-font-size: 1.4rem;
 // $h1-font-size: 1.6rem;
 
-// Navigation
-$nav-link-color: $white;
-$nav-link-hover-color: $red-light;
-$nav-link-active-color: $nav-link-hover-color;
-$nav-sticky-link-color: $black;
-$nav-sticky-link-hover-color: $purple;
-
 // Buttons
 $button-bg-color: $black !important;
 $button-color: $white !important;
@@ -23,3 +16,13 @@ $button-bg-hover-color: $red !important;
 $button-bg-color-info: $white !important;
 $button-color-info: $black !important;
 $button-hover-color-info: $white !important;
+
+// Cards
+$card-bg-color: rgba( $black, 0.1 );
+
+// Navigation
+$nav-link-color: $white;
+$nav-link-hover-color: $red-light;
+$nav-link-active-color: $nav-link-hover-color;
+$nav-sticky-link-color: $black;
+$nav-sticky-link-hover-color: $purple;
