--- a/resources/sass/_reset.scss
+++ b/resources/sass/_reset.scss
@@ -132,14 +132,13 @@ q:after {
 }
 
 textarea,
-input[type="text"],
-input[type="button"],
-input[type="submit"],
-input[type="reset"],
-input[type="search"],
-input[type="password"] {
+input[ type='text' ],
+input[ type='button' ],
+input[ type='submit' ],
+input[ type='reset' ],
+input[ type='search' ],
+input[ type='password' ] {
     appearance: none;
-    border-radius: 0;
 }
 
 table {
