--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -157,7 +157,6 @@ input[type=password] {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  border-radius: 0;
 }
 
 table {
@@ -565,11 +564,15 @@ a:hover {
   margin-bottom: 0;
 }
 .form-control {
+  border-radius: 8px;
   font-size: inherit !important;
+  height: auto;
+  line-height: 1 !important;
+  padding: 7.5px;
 }
-.ra__dark .form-control {
+.mf__section--purple .form-control {
   background-color: #F7F2EF;
-  color: #ffffff;
+  color: #000000;
 }
 
 .form-control.is-invalid,
